language/move-lang/tests/move_check/typing/module_call_explicit_type_arguments_invalid.exp
error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments_invalid.move:6:9 ───
   │
 6 │         foo<u64, u64>(false, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::foo'. Invalid argument for parameter 'x'
   │             --- Is not compatible with: 'u64'
   │                       ----- The type: 'bool'
   │

error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments_invalid.move:6:9 ───
   │
 6 │         foo<u64, u64>(false, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::foo'. Invalid argument for parameter 'y'
   │                  --- Is not compatible with: 'u64'
   │                              ----- The type: 'bool'
   │

error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments_invalid.move:7:9 ───
   │
 7 │         foo<bool, bool>(0, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::foo'. Invalid argument for parameter 'x'
   │             ---- Is not compatible with: 'bool'
   │                         - The type: integer
   │

error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments_invalid.move:8:9 ───
   │
 8 │         foo<bool, bool>(false, 0);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::foo'. Invalid argument for parameter 'y'
   │                   ---- Is not compatible with: 'bool'
   │                                - The type: integer
   │

error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments_invalid.move:9:9 ───
   │
 9 │         foo<bool, bool>(0, 0);
   │         ^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::foo'. Invalid argument for parameter 'x'
   │             ---- Is not compatible with: 'bool'
   │                         - The type: integer
   │

error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments_invalid.move:9:9 ───
   │
 9 │         foo<bool, bool>(0, 0);
   │         ^^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::foo'. Invalid argument for parameter 'y'
   │                   ---- Is not compatible with: 'bool'
   │                            - The type: integer
   │

error: 

    ┌── tests/move_check/typing/module_call_explicit_type_arguments_invalid.move:12:24 ───
    │
 12 │     fun t2<T, U, V>(t: T, u: U, v: V) {
    │                        - The type: 'T'
 13 │         foo<U, u64>(t, 0);
    │         ^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::foo'. Invalid argument for parameter 'x'
    │             - Is not compatible with: 'U'
    │

error: 

    ┌── tests/move_check/typing/module_call_explicit_type_arguments_invalid.move:12:30 ───
    │
 12 │     fun t2<T, U, V>(t: T, u: U, v: V) {
    │                              - The type: 'U'
 13 │         foo<U, u64>(t, 0);
 14 │         foo<V, T>(u, v);
    │         ^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::foo'. Invalid argument for parameter 'x'
    │             - Is not compatible with: 'V'
    │

error: 

    ┌── tests/move_check/typing/module_call_explicit_type_arguments_invalid.move:12:36 ───
    │
 12 │     fun t2<T, U, V>(t: T, u: U, v: V) {
    │                                    - The type: 'V'
 13 │         foo<U, u64>(t, 0);
 14 │         foo<V, T>(u, v);
    │         ^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::foo'. Invalid argument for parameter 'y'
    │                - Is not compatible with: 'T'
    │

